welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: not found: value Direction
  if (getDirection==Direction.OUEST) {
                    ^ZigZag:11: error: not found: value Direction
  } else if (getDirection==Direction.EST) {
                           ^